--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
 ---
 layout: default
 ---
-<div class="span4 offset4">
-  <pre>
-    <code>
-def post_to(post):
-    if len(post) > 140:
-        post_to_blog(post)
-    else:
-        post_to_twitter(post)
-    </code>
-  </pre>
-</div>
+{% for post in site.posts %}
+  <section>
+    <h2>{{post.title}}</h2>
+    <p>{{post.content | strip_html | truncatewords: 25}}<p>
+    <p class="small">{{post.date | date: "%d %b %Y"}}</p>
+    <a href="{{post.url}}" class="pull-right">Далее</a>
+  </section>
+{% endfor %}
