--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 {% for post in site.posts %}
-  <section>
+  <div>
     <h2>{{post.title}}</h2>
-    <p>{{post.content | strip_html | truncatewords: 25}}<p>
-    <p class="small">{{post.date | date: "%d %b %Y"}}</p>
-    <a href="{{post.url}}" class="pull-right">Далее</a>
-  </section>
+    <p>{{post.content | truncatewords: 25}}<p>
+    <p class="text-right small">{{post.date | date: "%d %b %Y"}}</p>
+    <p class="text-right"><a href="{{post.url}}">Далее</a></p>
+  </div>
 {% endfor %}
