--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 {% for post in site.posts %}
   <div>
     <h2>{{post.title}}</h2>
-    <p>{{post.content | truncatewords: 25}}<p>
+    {{post.content | truncatewords: 25}}
     <p class="text-right small">{{post.date | date: "%d %b %Y"}}</p>
     <p class="text-right"><a href="{{post.url}}">Далее</a></p>
   </div>
