--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 layout: default
 ---
 {% for post in site.posts %}
-  <div>
-    <h2>{{post.title}}</h2>
-    {{post.excerpt}}
-    <p class="text-right small">{{post.date | date: "%d %b %Y"}}</p>
-    <p class="text-right"><a href="{{post.url}}">Далее</a></p>
+  <div class='row'>
+    <div class="col-sm-12 col-md-12 post">
+        <h2>{{post.title}}</h2>
+        {{post.excerpt}}
+        <p class="text-right small">{{post.date | date: "%d %b %Y"}}</p>
+        <p class="text-right"><a href="{{post.url}}">Далее</a></p>
+    </div>
   </div>
 {% endfor %}
